--- a/css/power-cost-calculator.css
+++ b/css/power-cost-calculator.css
@@ -33,9 +33,18 @@ h3 {
     display: grid;
     width:100%;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+    "header  header  header"
+        "content content content"
+        "footer  footer  footer";
     grid-gap: 10px;
 
     }
+
+.headIntro {
+    display: grid;
+    grid-area: header;
+}
 
 .labelcontainer {
     display: grid;
@@ -55,10 +64,13 @@ text-align: center;
 input[type=text] {
     border: none;
     padding: 10px;
-    
+    border-radius: 3px;
     -moz-box-shadow:    5px 10px 18px #888888;
     -webkit-box-shadow: 5px 10px 18px #888888;
-    box-shadow:         5px 10px 18px #888888;;
+    box-shadow:         5px 10px 18px #888888;
+
+    background-color: #ffb7009a;
+    
 }
 
 .slider1 {
@@ -70,9 +82,9 @@ outline: none;
 opacity: 0.7;
 -webkit-transition: .2s;
 transition: opacity .2s;
--moz-box-shadow:    inset 0 0 4px #000000;
--webkit-box-shadow: inset 0 0 4px #000000;
-box-shadow:         inset 0 0 4px #000000;
+-moz-box-shadow:    inset 2px 2px 4px #888888;
+-webkit-box-shadow: inset 2px 2px 4px #888888;
+box-shadow:         inset 2px 2px 4px #888888;
 border-radius: 2.5px;
 }
 
@@ -103,3 +115,81 @@ cursor: pointer;
 -moz-box-shadow: 0 8px 6px -6px black;
 box-shadow: 0 8px 6px -6px black;  
 }
+
+.tooltip {
+    display:inline-block;
+    position:relative;
+    text-align:left;
+}
+
+.tooltip .top {
+    min-width:200px; 
+    max-width:400px;
+    top:-20%;
+    left:50%;
+    /* margin-left:20px; */
+    transform:translate(-70%, -100%);
+    padding:10px 20px;
+    color:#FF0000;
+    background-color:#FFB600;
+    font-weight:normal;
+    font-size:13px;
+    border-radius:8px;
+    position:absolute;
+    z-index:99999999;
+    box-sizing:border-box;
+    /* border:1px solid transparent; */
+    -moz-box-shadow:    5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+    box-shadow:         5px 10px 18px #888888;
+    visibility:hidden; 
+    opacity:0; 
+    transition: opacity 0.8s;
+}
+
+.tooltip:hover .top {
+    visibility:visible; 
+    opacity:1;
+}
+
+.tooltip .top i {
+    position:absolute;
+    top:100%;
+    left:50%;
+    margin-left:-12px;
+    width:24px;
+    height:12px;
+    overflow:hidden;
+}
+
+.tooltip .top i::after {
+    content:'';
+    position:absolute;
+    width:12px;
+    height:12px;
+    left:50%;
+    transform:translate(-50%,-50%) rotate(45deg);
+    background-color:#FFB600;
+    /* border:1px solid transparent; */
+    -moz-box-shadow:    5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+    box-shadow:         5px 10px 18px #888888;
+}
+
+#remindUser {
+    visibility:hidden; 
+    opacity:1; 
+    transition: opacity 0.8s;
+}
+
+::-webkit-input-placeholder { /* Edge */
+    color: red;
+    }
+    
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: red;
+    }
+    
+    ::placeholder {
+    color: red;
+    }
