--- a/css/power-cost-calculator.css
+++ b/css/power-cost-calculator.css
@@ -3,6 +3,8 @@ body {
     width: 90%;
     display: flex;
     margin: 0 auto;
+    color: #6d747b;
+    outline: none;
 }
 
 h3 {
@@ -44,6 +46,7 @@ h3 {
 .headIntro {
     display: grid;
     grid-area: header;
+    padding: 0 10%;
 }
 
 .labelcontainer {
@@ -68,9 +71,10 @@ input[type=text] {
     -moz-box-shadow:    5px 10px 18px #888888;
     -webkit-box-shadow: 5px 10px 18px #888888;
     box-shadow:         5px 10px 18px #888888;
-
-    background-color: #ffb7009a;
-    
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    opacity: 0.7;
+    background-color: #ffb7009a;    
 }
 
 .slider1 {
@@ -88,7 +92,7 @@ box-shadow:         inset 2px 2px 4px #888888;
 border-radius: 2.5px;
 }
 
-.slider:hover {
+input:hover, .slider1:hover {
 opacity: 1;
 }
 
@@ -186,10 +190,10 @@ box-shadow: 0 8px 6px -6px black;
     color: red;
     }
     
-    :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: red;
-    }
-    
-    ::placeholder {
-    color: red;
-    }
+::-ms-input-placeholder { /* Internet Explorer 10-11 */
+color: red;
+}
+
+::placeholder {
+color: red;
+}
