--- a/css/power-cost-calculator.css
+++ b/css/power-cost-calculator.css
@@ -58,6 +58,12 @@ h3 {
 display: grid;
 width: 100%;
 text-align: center;
+background-color: rgba(255, 183, 0, 0.535);
+border-radius: 10px;
+}
+
+.line-center {
+    text-align: center;
 }
 
 .copetitorcontainer{
