--- a/css/power-cost-calculator.css
+++ b/css/power-cost-calculator.css
@@ -78,14 +78,14 @@ h3 {
 .wrapper {
     display: grid;
     width:100%;
-    grid-template-columns: repeat(3, 1fr);
-    /* grid-template-columns: 20% 60% 20%; */
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid-template-columns: 20% 60% 20%;
     grid-template-areas:
         "header  header  header"
         "content content content"
         "footer  footer  footer";
     grid-gap: 10px;
-    }
+}
 
 .headIntro {
     display: grid;
@@ -117,8 +117,6 @@ border-radius: 10px;
 .dark {
     background-color: hsla(210, 6%, 45%, 0.3);
 }
-
-
 
 input[type=text], input[type=email], textarea {
     border: none;
@@ -243,7 +241,7 @@ box-shadow: 0 8px 6px -6px black;
 
 ::-webkit-input-placeholder { /* Edge */
     color: red;
-    }
+}
     
 ::-ms-input-placeholder { /* Internet Explorer 10-11 */
 color: red;
@@ -254,12 +252,28 @@ color: red;
 }
 
 /* Popup modal form */
+
+
 #popup-wrapper {
-    position:fixed;
-    left:25%;
+    /* position:fixed; Use for modal */
+    /* left:25%;*/
+    display: grid;
     top:auto;
-    width: 80%;
+    width: 100%;
+    margin: 0 auto;
+    padding: 10px;
+    /* grid-template-columns: repeat(1, 1fr); */
+        /* grid-template-columns:10% 80% 10%; */
+        grid-template-areas:
+            "content";
+        grid-gap: 10px;
+    }
+
+
+.form-popup {
+    padding: 25px; 
 }
+
 #popup-wrapper .form-popup {
     display: none;
     position: absolute;
@@ -267,44 +281,72 @@ color: red;
     z-index: 99;
     background: #f5f1f1;
     border-radius: 15px;
-    width: 60%;
-    }
+    width: 50%;
+
+}
+
+.form-wrapper {
+    display: grid;
+    width:100%;
+    /* grid-template-columns: repeat(2, 1fr); */
+    grid-template-columns: 50% 50%;
+    grid-template-areas:
+        "content content";
+    grid-gap: 10px 10px;
+    /* border-bottom:  2px solid;
+    border-image: radial-gradient(rgb(0,143,104), rgba(0,0,0,0.01)) 1;     */
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
 
 .form-container {
     width: 98%;
     }
 
-    .form-popup input[type=text], .form-popup input[type=email], .form-popup textarea {
-        border: none;
-        padding: 10px;
-        border-radius: 3px;
-        -moz-box-shadow:    5px 10px 18px #888888;
-        -webkit-box-shadow: 5px 10px 18px #888888;
-        box-shadow:         5px 10px 18px #888888;
-        -webkit-transition: .2s;
-        transition: opacity .2s;
-        opacity: 0.7;
-        background-color: #ffb7009a;    
-    }
+.form-popup input[type=text], .form-popup input[type=email], .form-popup textarea {
+    border: none;
+    padding: 10px;
+    border-radius: 3px;
+    -moz-box-shadow:    5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+    box-shadow:         5px 10px 18px #888888;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    opacity: 0.7;
+    background-color: #ffb7009a; 
+      
+}
 
 .cancel {
     position: relative !important;
     top: 0;
 }
 
-/* #grid-select{
-    display: grid;
-    grid-area: header;
-    padding: 0 5%;
-} */
-
 #off-grid, #on-grid, #self-consumption, #peak-load, #hybrid-system{
     display: grid;
     text-align: center;
     opacity:1; 
     transition: display 4.8s;
+    margin-top: 30px;
 }
 
+#ss4037, #ss4074, #ss202 {
+    display: block;
+    text-align: left;
+    opacity:1; 
+    transition: display 4.8s;
+    margin-top: 30px;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    }
 
 .sellect-icon {
     max-width: 120px;
@@ -338,9 +380,9 @@ color: red;
     content: "INCREASE" "\A" "SELF CONSUMPTION";
     font-weight: 300;
     color: #2a2727; 
-    white-space: pre; 
-    
+    white-space: pre;     
 }
+
 #peak-load::after {
     content: "PEAK" "\A" "LOAD CAPPING";   
     font-weight: 300;
@@ -356,16 +398,113 @@ color: red;
 
 #self-consumption, #peak-load, #hybrid-system  {
     display: none;
-
 }
-
 
 #popup-wrapper {
     overflow-y: initial !important;    
 }
 
 #myForm {
-    height: 600px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    display: none;
 }
+
+
+.info-image {
+    vertical-align: text-bottom !important;
+}
+
+
+
+/* The container */
+.container {
+    display: flex;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 15px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    vertical-align: sub;
+    
+    }
+
+    .container img {
+        width:300px;
+        height: 150px;
+        margin: 0 10px;
+    }
+    
+    /* Hide the browser's default radio button */
+    .container input {
+    /* position: absolute; */
+    opacity: 0;
+    cursor: pointer;
+    }
+    
+    /* Create a custom radio button */
+    .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 10%;
+    border: ridge;
+    -moz-box-shadow:    5px 10px 18px #888888;
+    -webkit-box-shadow: 5px 10px 18px #888888;
+    box-shadow:         5px 10px 18px #888888;
+    }
+    
+    /* On mouse-over, add a grey background color */
+    .container:hover input ~ .checkmark {
+    background-color: #FFB600;
+    opacity: 0.6;
+    }
+    
+    /* When the radio button is checked, add a blue background */
+    .container input:checked ~ .checkmark {
+    background-color: #FFB600;
+    }
+    
+    /* Create the indicator (the dot/circle - hidden when not checked) */
+    .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+    }
+    
+    /* Show the indicator (dot/circle) when checked */
+    .container input:checked ~ .checkmark:after {
+    display: block;
+    }
+    
+    
+    /* Style the checkmark/indicator */
+    .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    }
+
+    #ss4037, #ss4074, #ss202 {
+        display: none;
+        border-radius: 5px;
+        padding: 5px;
+        -moz-box-shadow:    5px 10px 18px #888888;
+        -webkit-box-shadow: 5px 10px 18px #888888;
+        box-shadow:         5px 10px 18px #888888;
+    }
+
+    input[type=radio] {
+        width: 1px;
+    }
